# git-remote-codecommit

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: collect-coverage.sh  matrix.py
.github/workflows/: ci.yml  clone.yml  push.yml
crates/git-remote-codecommit/: Cargo.toml  build.rs
crates/git-remote-codecommit/src/: canonical_request.rs  credential_scope.rs  datetime.rs  hex.rs  hostname.rs  logging.rs  main.rs  sdk_context.rs  string_to_sign.rs  urlsafe.rs  username.rs
crates/git-remote-codecommit/src/nightly/: bool_or.rs  mod.rs  windows_process_exit_code.rs
crates/git-remote-codecommit/src/uri/: error.rs  mod.rs
