# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Brandon LeBlanc <brandon@leblanc.codes>"]
repository = "https://github.com/demosdemon/git-remote-codecommit"
homepage = "https://github.com/demosdemon/git-remote-codecommit"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["git", "git-remote", "codecommit"]
categories = ["command-line-utilities", "development-tools"]
publish = true

[workspace.lints.rust]
let_underscore_drop = "warn"
# unused_crate_dependencies = "warn" # use `cargo udeps` instead
non_ascii_idents = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
 
[workspace.lints.clippy]
# struct_excessive_bools = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# unreadable_literal = "allow"
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
unwrap_used = "warn"
 
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "debuginfo"
