[package]
name = "git-remote-codecommit"
description = "A git remote tool for AWS CodeCommit."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.13"
aws-credential-types = "1.2.11"
aws-sigv4 = { version = "1.3.8", default-features = false }
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
clap = { version = "4.6.0", features = ["deprecated", "derive", "cargo", "env", "wrap_help"] }
hmac = "0.12.1"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["mio", "rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uriparse = "0.6.4"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.61.2"
features = ["Win32_Foundation", "Win32_System_Console"]
